--- a/sites/all/themes/wiredpea/css/wiredpea.css
+++ b/sites/all/themes/wiredpea/css/wiredpea.css
@@ -1,60 +1,1 @@
-@font-face {
-  font-family: harabara;
-  src: url("../font/Harabara.eot");
-  /* IE9 compat mode */
-  src: url("../font/Harabara.eot?#iefix") format("embedded-opentype"), url("../font/Harabara.woff") format("woff"), url("../font/Harabara.ttf") format("truetype"), url("../font/Harabara.svg") format("svg");
-  /* Legacy iOS */
-}
-/* line 13, ../sass/wiredpea.scss */
-#header {
-  margin: auto;
-  text-align: center;
-}
-/* line 17, ../sass/wiredpea.scss */
-#header a.header__logo {
-  float: none;
-}
-
-/* line 22, ../sass/wiredpea.scss */
-h1, h2 {
-  font-family: harabara, Verdana, Tahoma, "DejaVu Sans", sans-serif;
-  letter-spacing: 0.1rem;
-}
-
-/* line 27, ../sass/wiredpea.scss */
-a {
-  color: #409818;
-  text-decoration: none;
-}
-
-/* line 32, ../sass/wiredpea.scss */
-a:hover {
-  color: #043023;
-  text-decoration: underline;
-}
-
-/* line 37, ../sass/wiredpea.scss */
-article {
-  border-bottom: 1px dotted #999999;
-  padding-bottom: 5px;
-}
-/* line 41, ../sass/wiredpea.scss */
-article header {
-  margin-bottom: 1rem;
-  margin-top: 1.25rem;
-}
-/* line 45, ../sass/wiredpea.scss */
-article header .submitted {
-  margin: 0;
-  margin-top: 0.5rem;
-  font-size: 0.75rem;
-  color: #999;
-}
-/* line 52, ../sass/wiredpea.scss */
-article header h2 {
-  line-height: 1.1rem;
-}
-/* line 56, ../sass/wiredpea.scss */
-article p {
-  margin: 0;
-}
+@font-face{font-family:harabara;src:url("../font/Harabara.eot");src:url("../font/Harabara.eot?#iefix") format("embedded-opentype"),url("../font/Harabara.woff") format("woff"),url("../font/Harabara.ttf") format("truetype"),url("../font/Harabara.svg") format("svg")}h1,h2{font-family:harabara, Verdana, Tahoma, "DejaVu Sans", sans-serif;letter-spacing:0.1rem}a{color:#409818;text-decoration:none}a:hover{color:#043023;text-decoration:underline}article{border-bottom:1px dotted #999999;padding-bottom:5px}article header{margin-bottom:1rem;margin-top:1.25rem}article header h2{line-height:1.1rem}article p{margin:0;white-space:normal}article img{padding:0px 10px 5px 0px}
