Changed the link color to make it more consitent.

--- a/sites/all/themes/wiredpea/sass/components/_pager.scss
+++ b/sites/all/themes/wiredpea/sass/components/_pager.scss
@@ -4,7 +4,7 @@
     background: lighten($link, 50%);
 
     a {
-      color: #000000;
+      color: $link_active;
       text-decoration: none;
     }
   }
