Made the Drupal association logo centered.

--- a/sites/all/themes/wiredpea/css/wiredpea.styles.css
+++ b/sites/all/themes/wiredpea/css/wiredpea.styles.css
@@ -188,4 +188,8 @@ article.node {
 .l-region--sidebar-second {
   text-align: justify; }
 
+/* line 5, ../sass/components/_sidebar.scss */
+#block-block-2 {
+  text-align: center; }
+
 /*# sourceMappingURL=wiredpea.styles.css.map */
