--- a/sites/all/themes/wiredpea/css/wiredpea.no-query.css
+++ b/sites/all/themes/wiredpea/css/wiredpea.no-query.css
@@ -156,4 +156,8 @@ article.node {
 .l-region--sidebar-second {
   text-align: justify; }
 
+/* line 5, ../sass/components/_sidebar.scss */
+#block-block-2 {
+  text-align: center; }
+
 /*# sourceMappingURL=wiredpea.no-query.css.map */
