Made a nicer font, and made an .eslintrc.

--- a/web/themes/custom/wiredpea/sass/app.scss
+++ b/web/themes/custom/wiredpea/sass/app.scss
@@ -1,3 +1,10 @@
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  line-height: 1.65em;
+}
+
 .content {
   .field--name-field-paragraph {
     text-align: justify;
