--- a/web/themes/custom/wiredpea/css/app.css
+++ b/web/themes/custom/wiredpea/css/app.css
@@ -1,3 +1,9 @@
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  line-height: 1.65em; }
+
 .content .field--name-field-paragraph {
   text-align: justify; }
 
