--- a/web/themes/custom/wiredpea/css/app.css
+++ b/web/themes/custom/wiredpea/css/app.css
@@ -2,7 +2,8 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
-  line-height: 1.65em; }
+  font-size: 21px;
+  line-height: 32px; }
 
 .main-container {
   background-color: #FFFFFF; }
