--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10882,3 +10882,22 @@ a.text-dark:focus {
   }
 }
 
+header.masthead {
+  margin-bottom: 50px;
+  background: no-repeat 50%;
+  background-color: #6c757d;
+  background-attachment: scroll;
+  position: relative;
+  background-size: cover;
+}
+
+header.masthead .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #212529;
+  opacity: 0.5;
+}
+
