--- a/web/themes/contrib/bootstrap_barrio/templates/commerce/products/_commerce-product.html.twig
+++ b/web/themes/contrib/bootstrap_barrio/templates/commerce/products/_commerce-product.html.twig
@@ -2,7 +2,8 @@
 /**
  * @file
  *
- * Default product template.
+ * Product template example.
+ * Change layout moving singular field
  *
  * Available variables:
  * - attributes: HTML attributes for the wrapper.
@@ -21,7 +22,7 @@
 #}
 <article{{ attributes }}>
   <div class="row">
-    <div class="col-sm-6">{{- product|without('variation_attributes', 'field_imagen') -}}</div>
-    <div class="photo col-sm-6">{{ product.field_imagen }}</div>
+    <div class="col-sm-6">{{- product|without('variation_attributes', 'field_image') -}}</div>
+    <div class="photo col-sm-6">{{ product.field_image }}</div>
   </div>
 </article>
