Updated seo checklist to 5.0

--- a/web/modules/contrib/seo_checklist/templates/seo-checklist-getting-started.html.twig
+++ b/web/modules/contrib/seo_checklist/templates/seo-checklist-getting-started.html.twig
@@ -13,8 +13,8 @@
 <h3>Getting started with Drupal 8 SEO</h3>
 <p>Please read these instructions to get the most out of your Drupal Search Engine Optimization efforts.</p>
 
-<h4>Module + book = Drupal SEO shortcut</h4>
-<p>This module was created along with the book <a href="http://www.drupalseobook.com/">Drupal 8 SEO</a> by Ben Finklea. While the module explains <em>what to do</em>, the book tells you <em>how to do it</em>. They're designed to work together to give you a significant shortcut to your technical SEO efforts.</p>
+<h4>Module + book/guide = Drupal SEO shortcut</h4>
+<p>This module was created along with the book <a href="http://www.drupalseobook.com/">Drupal 8 SEO</a> by Ben Finklea. While the module explains <em>what to do</em>, the book tells you <em>how to do it</em>. They're designed to work together to give you a significant shortcut to your technical SEO efforts. We’ve also adapted the book (and updated the content) into an online <a href="https://www.volacci.com/drupal-seo-guide/">Drupal SEO Guide</a>.</p>
 
 <h4>Technical SEO -vs- content marketing</h4>
 <p>This checklist is a guide to technical SEO but it doesn't help you with content optimization, keyword research, marketing strategy, etc. If you need help with these things, consider using a Drupal-specific Internet Marketing consultant like <a href="http://www.volacci.com/contact?{{ ga_query_string }}">Volacci</a> or ask your Drupal developer for a recommendation.</p>
